[package]
name = "craftmine"
version = "0.1.0"
authors = ["Ratchaphon Manosuthi <themelo64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.7"
structopt = { version = "0.3" }
crossbeam = "0.7"
rayon = "1.3"
log = "0.4"
env_logger = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
uuid = { version = "0.8", features = ["serde"] }
byteorder = "1.3"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
sysinfo = "0.15"
num_cpus = "1.13"
ring = "0.16"
openssl = "*"

[features]
web = []
repl = []